Add createdAt field
