# docs/openapi.yaml
@@ -225,6 +225,9 @@ paths:
                           updatedAt:
                             type: string
                             minLength: 1
+                          createdAt:
+                            type: string
+                            minLength: 1
                         resources:
                           type: array
                           items:
@@ -242,6 +245,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-02-16T04:51:15.239497'
+                        createdAt: '2024-01-16T04:51:15.239497'
                         resources:
                           - id: 2d043bdb-fc62-4650-8426-dc72492cd621
                             name: TEST ITEM FOR APD /verify TESTS
@@ -262,6 +266,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-02-16T04:51:15.239497'
+                        createdAt: '2024-02-16T04:51:15.239497'
                         resources:
                           - id: 2d043bdb-fc62-4650-8426-dc72492cd621
                             name: TEST ITEM FOR APD /verify TESTS
@@ -270,6 +275,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct5ui'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2023-12-16T04:51:15.239497'
+                        createdAt: '2023-11-16T04:51:15.239497'
                         resources:
                           - id: b58da193-23d9-43eb-b98a-a103d4b6103c
                             name: FW055 Environment-UUID
@@ -281,6 +287,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2022-02-16T04:51:15.239497'
+                        createdAt: '2022-02-16T04:51:15.239497'
                         resources:
                           - id: a347c5b6-5281-4749-9eab-89784d8f8f9a
                             name: Chandigarh Paid Parking Locations
@@ -1517,6 +1524,9 @@ paths:
                         updatedAt:
                           type: string
                           minLength: 1
+                        createdAt:
+                          type: string
+                          minLength: 1
                         providerName:
                           type: string
                 x-examples:
@@ -1528,21 +1538,25 @@ paths:
                         resourceName: Chandigarh Paid Parking Locations
                         accessPolicy: OPEN
                         updatedAt: '2024-12-01T19:26:13.005418'
+                        createdAt: '2024-12-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: 2d043bdb-fc62-4650-8426-dc72492cd621
                         resourceName: TEST ITEM FOR APD /verify TESTS
                         accessPolicy: SECURE
                         updatedAt: '2024-11-01T19:26:13.005418'
+                        createdAt: '2024-11-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: b58da193-23d9-43eb-b98a-a103d4b6103c
                         resourceName: FW055 Environment-UUID
                         accessPolicy: OPEN
                         updatedAt: '2024-10-01T19:26:13.005418'
+                        createdAt: '2024-10-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: ae2b8b01-f642-411a-babb-cbd1b75fa2a1
                         resourceName: Flood level data from FWR055
                         accessPolicy: SECURE
                         updatedAt: '2024-09-01T19:26:13.005418'
+                        createdAt: '2024-09-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
               examples:
                 List All Resources:
@@ -1554,21 +1568,25 @@ paths:
                         resourceName: Chandigarh Paid Parking Locations
                         accessPolicy: OPEN
                         updatedAt: '2024-12-01T19:26:13.005418'
+                        createdAt: '2024-12-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: 2d043bdb-fc62-4650-8426-dc72492cd621
                         resourceName: TEST ITEM FOR APD /verify TESTS
                         accessPolicy: SECURE
                         updatedAt: '2024-11-01T19:26:13.005418'
+                        createdAt: '2024-11-01T19:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: b58da193-23d9-43eb-b98a-a103d4b6103c
                         resourceName: FW055 Environment-UUID
                         accessPolicy: OPEN
                         updatedAt: '2024-10-01T19:26:13.005418'
+                        createdAt: '2024-10-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: ae2b8b01-f642-411a-babb-cbd1b75fa2a1
                         resourceName: Flood level data from FWR055
                         accessPolicy: SECURE
                         updatedAt: '2024-09-01T19:26:13.005418'
+                        createdAt: '2024-09-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                 List Resource of Provider:
                   value:
@@ -1579,21 +1597,25 @@ paths:
                         resourceName: Chandigarh Paid Parking Locations
                         accessPolicy: OPEN
                         updatedAt: '2024-12-01T19:26:13.005418'
+                        createdAt: '2024-12-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: 2d043bdb-fc62-4650-8426-dc72492cd621
                         resourceName: TEST ITEM FOR APD /verify TESTS
                         accessPolicy: SECURE
                         updatedAt: '2024-11-01T19:26:13.005418'
+                        createdAt: '2024-11-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: b58da193-23d9-43eb-b98a-a103d4b6103c
                         resourceName: FW055 Environment-UUID
                         accessPolicy: OPEN
                         updatedAt: '2024-10-01T19:26:13.005418'
+                        createdAt: '2024-10-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                       - resourceId: ae2b8b01-f642-411a-babb-cbd1b75fa2a1
                         resourceName: Flood level data from FWR055
                         accessPolicy: SECURE
                         updatedAt: '2024-09-01T19:26:13.005418'
+                        createdAt: '2024-09-01T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
                 List Resource by ID:
                   value:
@@ -1604,6 +1626,7 @@ paths:
                         resourceName: Chandigarh Paid Parking Locations
                         accessPolicy: OPEN
                         updatedAt: '2024-03-03T19:26:13.005418'
+                        createdAt: '2024-03-03T17:26:13.005418'
                         providerName: Administrator of the IUDX platform
         '204':
           description: no content
@@ -1693,14 +1716,22 @@ paths:
                         numberOfResources:
                           type: integer
                           minimum: 1
-                        resourceServer:
+                        resourceServerUrl:
+                          type: string
+                          minLength: 1
+                        updatedAt:
+                          type: string
+                          minLength: 1
+                        createdAt:
                           type: string
                           minLength: 1
                       required:
                         - providerId
                         - providerName
                         - numberOfResources
-                        - resourceServer
+                        - resourceServerUrl
+                        - updatedAt
+                        - createdAt
                 required:
                   - type
                   - title
@@ -1726,14 +1757,17 @@ paths:
                           "numberOfResources": 8,
                           "providerName": "Administrator of the IUDX platform",
                           "resourceServerUrl": "rs.iudx.io",
-                          "updatedAt": "2024-03-02T19:00:00.885808"
+                          "updatedAt": "2024-03-02T19:00:00.885808",
+                          "createdAt": "2024-02-02T15:00:00.885808"
+
                         },
                         {
                           "providerId": "c3a2af3f-2524-4a84-816e-91f9ab23d375",
                           "numberOfResources": 5,
                           "providerName": "Administrator of the platform",
                           "resourceServerUrl": "rs.iudx.io",
-                          "updatedAt": "2024-02-15T10:42:39.513330"
+                          "updatedAt": "2024-02-15T10:42:39.513330",
+                          "createdAt": "2024-02-08T10:42:39.513330"
                         }
                       ]
                     }
@@ -1748,7 +1782,8 @@ paths:
                           "numberOfResources": 8,
                           "providerName": "Administrator of the IUDX platform",
                           "resourceServerUrl": "rs.iudx.io",
-                          "updatedAt": "2024-03-02T19:00:00.885808"
+                          "updatedAt": "2024-03-02T19:00:00.885808",
+                          "createdAt": "2024-02-02T19:00:00.885808"
                         }
                       ]
                     }
@@ -1907,7 +1942,10 @@ paths:
                           type: string
                         providerName:
                           type: string
-                        updateAt:
+                        updatedAt:
+                          type: string
+                          minLength: 1
+                        createdAt:
                           type: string
                           minLength: 1
                         resources:
@@ -1927,6 +1965,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-02-16T04:51:15.239497'
+                        createdAt: '2024-02-15T04:51:15.239497'
                         resources:
                           - id: 2d043bdb-fc62-4650-8426-dc72492cd621
                             name: TEST ITEM FOR APD /verify TESTS
@@ -1935,6 +1974,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct5ui'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-02-15T03:51:15.239497'
+                        createdAt: '2024-02-14T04:51:15.239497'
                         resources:
                           - id: b58da193-23d9-43eb-b98a-a103d4b6103c
                             name: FW055 Environment-UUID
@@ -1947,6 +1987,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-02-16T03:51:15.239497'
+                        createdAt: '2024-02-15T03:51:15.239497'
                         resources:
                           - id: 2d043bdb-fc62-4650-8426-dc72492cd621
                             name: TEST ITEM FOR APD /verify TESTS
@@ -1955,6 +1996,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct5ui'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2024-01-15T03:51:15.239497'
+                        createdAt: '2024-01-14T03:51:15.239497'
                         resources:
                           - id: b58da193-23d9-43eb-b98a-a103d4b6103c
                             name: FW055 Environment-UUID
@@ -1966,6 +2008,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2023-10-15T03:51:15.239497'
+                        createdAt: '2023-10-13T03:51:15.239497'
                         resources:
                           - id: a347c5b6-5281-4749-9eab-89784d8f8f9a
                             name: Chandigarh Paid Parking Locations
@@ -1977,6 +2020,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2023-09-15T03:51:15.239497'
+                        createdAt: '2023-09-14T03:51:15.239497'
                         resources:
                           - id: 2d043bdb-fc62-4650-8426-dc72492cd621
                             name: TEST ITEM FOR APD /verify TESTS
@@ -1985,6 +2029,7 @@ paths:
                       - productId: 'urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct5ui'
                         providerName: Administrator of the IUDX platform
                         updatedAt: '2023-08-15T03:51:15.239497'
+                        createdAt: '2023-08-14T03:51:15.239497'
                         resources:
                           - id: b58da193-23d9-43eb-b98a-a103d4b6103c
                             name: FW055 Environment-UUID
@@ -2740,7 +2785,7 @@ components:
               "product": {
                 "productId": "urn:datakaveri.org:b2c27f3f-2524-4a84-816e-91f9ab23f837:testProduct1",
                 "productVariantId": "060cc0ed-14fb-4f07-be1d-f0b66585eab6",
-                "resourceName": "[Chandigarh Paid Parking Locations, TEST ITEM FOR APD /verify TESTS]",
+                "resourceName": ["Chandigarh Paid Parking Locations", "TEST ITEM FOR APD /verify TESTS"],
                 "productVariantName": "variant1",
                 "price": "100.0",
                 "expiryInMonths": "12",
@@ -3065,6 +3110,10 @@ components:
                 type: object
               updatedAt:
                 type: string
+                minLength: 1
+              createdAt:
+                type: string
+                minLength: 1
       required:
         - type
         - title
@@ -3085,6 +3134,7 @@ components:
             constraints:
               access: file
             updatedAt: '2024-03-03T05:32:33.586454'
+            createdAt: '2023-03-03T05:32:33.586454'
             consumer:
               email: vasanth.rajaraman@datakaveri.org
               name:
@@ -3470,6 +3520,9 @@ components:
             updatedAt:
               type: string
               minLength: 1
+            createdAt:
+              type: string
+              minLength: 1
           required:
             - accountId
             - type
@@ -3483,6 +3536,7 @@ components:
             - customerFacingBusinessName
             - accountProductId
             - updatedAt
+            - createdAt
       required:
         - type
         - title
@@ -3521,7 +3575,8 @@ components:
               "pan": "ABACL1234C",
               "gst": "19AABCU9603R1ZM"
             },
-            "updatedAt": "2024-03-02T19:50:57.704017"
+            "updatedAt": "2024-03-02T19:50:57.704017",
+            "createdAt": "2023-03-02T19:50:57.704017"
           }
 
 
