# src/main/java/iudx/data/marketplace/apiserver/provider/linkedAccount/util/Constants.java
@@ -16,8 +16,8 @@ public static   String UPDATE_LINKED_ACCOUNT_STATUS_QUERY =
   public static final String ACCOUNT_TYPE = "route";
   public static final String FAILURE_MESSAGE = "User registration incomplete : ";
   public static final String GET_ACCOUNT_ID_QUERY =
-      "SELECT account_id, rzp_account_product_id, modified_at AS \"updatedAt\" " +
-              " FROM merchant_table WHERE provider_id = '$1'";
+      "SELECT account_id, rzp_account_product_id, modified_at AS \"updatedAt\" , created_at AS  \"createdAt\" "
+          + " FROM merchant_table WHERE provider_id = '$1'";
   public static final String GET_MERCHANT_INFO_QUERY = "SELECT account_id, reference_id FROM merchant_table WHERE provider_id = '$1'" +
           " AND email = '$2'";
 
